Flexwrap bug fallback

--- a/css/style.css
+++ b/css/style.css
@@ -1328,7 +1328,7 @@ img[data-src] {
 }
 .project-list__item {
     display: inline-block;
-    width: 20%;
+    width: 19%;
     position: relative;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
